--- a/src/App.css
+++ b/src/App.css
@@ -52,11 +52,12 @@ button {
    font-size: 16px;
    margin: 30px;
    padding: 15px 0;
-   background-color: var(--secondary-color);
+   background-color: var(--primary-color);
    min-width: 275px;
    border: none;
    cursor: pointer;
    color: var(--white-color);
+   border-radius: 15px;
 }
 
 img {
