--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,13 @@
    --four-color: #333333;
    --black-color: #000000;
    --white-color: #ffff;
+   --better-white: #fbfcfd;
 }
 
 .App {
    text-align: center;
    font-family: 'Raleway-Medium', sans-serif;
+   background-color: #fbfcfd;
 }
 
 h1 {
