--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -1,23 +1,13 @@
-.Landing {
-   text-align: center;
-   margin-top: 90px;
-}
-
 .Logo {
    display: none;
 }
 
-.Landing h1 {
-   margin-bottom: 0;
+.Lead {
+   width: 100%;
 }
 
-.Landing h2 {
-   margin-bottom: 30px;
-}
-
-.Landing h2 em {
-   text-decoration: line-through;
-   font-style: normal;
+.image img {
+   width: 260px;
 }
 
 .button {
@@ -25,8 +15,8 @@
 }
 
 @media (min-width: 1000px) {
-   .Landing {
-      width: 600px;
-      margin: 150px auto 50px auto;
+   .FirstGroup {
+      display: flex;
+      justify-content: space-between;
    }
 }
