--- a/src/components/Servicios/Servicios.module.css
+++ b/src/components/Servicios/Servicios.module.css
@@ -4,13 +4,22 @@
 }
 
 .Servicio h1 {
-   font-size: 36px;
+   font-size: 24px;
 }
 h2 {
    line-height: 1.7;
 }
 .Icono img {
    margin: 30px;
+}
+
+.Title h2 {
+   font-size: 36px;
+   font-weight: bold;
+}
+
+.Servicio ul {
+   list-style-type: lower-roman;
 }
 
 @media (min-width: 1000px) {
