--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,18 +1,30 @@
 .Footer {
-  display: flex;
-  flex-flow: column;
-  margin-top: 20px;
+   display: flex;
+   flex-flow: column;
+   margin-top: 20px;
 }
 
 .Footer h2 {
-  text-align: center;
+   text-align: center;
+}
+
+.Footer h3 {
+   color: var(--black-color);
 }
 
 .Footer img {
-  margin: 5px;
+   margin: 5px;
 }
 
 .Redes {
-  display: flex;
-  justify-content: center;
+   display: flex;
+   justify-content: center;
+}
+
+@media (min-width: 1000px) {
+   .Footer {
+      flex-flow: row;
+      justify-content: space-around;
+      align-items: flex-end;
+   }
 }
