add navigation by ids

--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -12,6 +12,79 @@
    padding: 0;
 }
 
+.NavigationItem {
+   padding: 10px;
+   margin: 10px 0;
+   box-sizing: border-box;
+   display: block;
+   width: 100%;
+   background-color: var(--primary-color);
+   border-radius: 15px;
+}
+
+@media (min-width: 1000px) {
+   .NavigationItem {
+      background-color: var(--better-white);
+   }
+}
+
+.NavigationItem a,
+.NavigationItem h3 {
+   font-family: 'Raleway-Medium';
+   font-size: 18px;
+   color: var(--white-color);
+   width: 100%;
+   height: auto;
+   box-sizing: border-box;
+   display: block;
+   text-decoration: none;
+   text-align: center;
+   margin: 0;
+}
+
+.NavigationItem a:hover,
+.NavigationItem a:active,
+.NavigationItem a.active {
+   text-decoration: underline;
+   background-color: white;
+   border-bottom: 4px solid var(--primary-color);
+   color: var(--primary-color);
+}
+
+@media (min-width: 1000px) {
+   .NavigationItem {
+      margin: 20px;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      width: auto;
+      border-bottom: none;
+   }
+
+   .NavigationItem a,
+   .NavigationItem h3 {
+      font-size: 16px;
+      color: var(--primary-color);
+   }
+
+   .NavigationItem p {
+      font-size: 16px;
+   }
+
+   .NavigationItem a {
+      color: var(--primary-color);
+      border-bottom: 4px solid transparent;
+   }
+
+   .NavigationItem a:hover,
+   .NavigationItem a:active,
+   .NavigationItem a.active {
+      background-color: white;
+      border-bottom: 4px solid var(--primary-color);
+      color: var(--primary-color);
+   }
+}
+
 @media (min-width: 1000px) {
    .NavigationItems ul {
       display: flex;
